# Airtasker

./: .env.example  .gitignore  README.md  SUBMISSION.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agents/: pyproject.toml  requirements.txt
agents/reviewer/: graph.py  run.py  state.py
agents/reviewer/nodes/: emit_verdict.py  fetch_submission.py  verify.py
agents/reviewer/tools/: verification_tools.py
agents/shared/: bip32_session.py  chain_client.py  config.py  siwe_auth.py  x402_client.py
agents/tests/: test_reviewer_graph.py  test_session_key.py  test_worker_graph.py
agents/worker/: graph.py  run.py  state.py
agents/worker/nodes/: bid.py  discover.py  execute.py  handle_rejection.py  submit.py
agents/worker/tools/: execution_tools.py  registry_tools.py
api/: Dockerfile  package-lock.json  package.json
api/src/: config.ts  index.ts
api/src/middleware/: auth.middleware.ts  x402.middleware.ts
api/src/routes/: agents.router.ts  bids.router.ts  reviews.router.ts  submissions.router.ts  tasks.router.ts
api/src/services/: chain.service.ts  ipfs.service.ts
api/src/types/: index.ts
api/src/utils/: bip32.ts  eip3009.ts  (+1 more)
api/tests/: x402.test.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  SeedTestData.s.sol
contracts/src/: KitePassport.sol  TaskEscrow.sol  TaskRegistry.sol
contracts/test/: KitePassport.t.sol  TaskEscrow.t.sol  TaskRegistry.t.sol
e2e/scripts/: accept-bid.sh  demo-pilot.sh  lib.sh  run-reviewer.sh  run-worker.sh  show-state.sh
frontend/: Dockerfile  package-lock.json  package.json
(+25 files in other folders)
