[project]
name = "airtasker-agents"
version = "0.1.0"
description = "LangGraph agents for the Airtasker Agent Marketplace"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "bip-utils>=2.9.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
